--- a/deployments/docker-compose/signoz/docker-compose.yaml
+++ b/deployments/docker-compose/signoz/docker-compose.yaml
@@ -7,7 +7,7 @@ x-common: &common
       max-size: 50m
       max-file: "3"
 x-clickhouse-defaults: &clickhouse-defaults
-  !!merge <<: *common
+  <<: *common
   # addding non LTS version due to this fix https://github.com/ClickHouse/ClickHouse/commit/32caf8716352f45c1b617274c7508c86b7d1afab
   image: clickhouse/clickhouse-server:24.1.2-alpine
   tty: true
@@ -36,7 +36,7 @@ x-clickhouse-defaults: &clickhouse-defaults
       soft: 262144
       hard: 262144
 x-zookeeper-defaults: &zookeeper-defaults
-  !!merge <<: *common
+  <<: *common
   image: bitnami/zookeeper:3.7.1
   user: root
   labels:
@@ -51,7 +51,7 @@ x-zookeeper-defaults: &zookeeper-defaults
     timeout: 3s
     retries: 10
 x-db-depend: &db-depend
-  !!merge <<: *common
+  <<: *common
   depends_on:
     clickhouse:
       condition: service_healthy
@@ -60,7 +60,7 @@ x-db-depend: &db-depend
 
 services:
   init-clickhouse:
-    !!merge <<: *common
+    <<: *common
     image: clickhouse/clickhouse-server:24.1.2-alpine
     container_name: signoz-init-clickhouse
     command:
@@ -79,7 +79,7 @@ services:
     volumes:
       - ./clickhouse/user_scripts:/var/lib/clickhouse/user_scripts/
   zookeeper-1:
-    !!merge <<: *zookeeper-defaults
+    <<: *zookeeper-defaults
     container_name: signoz-zookeeper-1
     # ports:
     #   - "2181:2181"
@@ -94,7 +94,7 @@ services:
       - ZOO_ENABLE_PROMETHEUS_METRICS=yes
       - ZOO_PROMETHEUS_METRICS_PORT_NUMBER=9141
   clickhouse:
-    !!merge <<: *clickhouse-defaults
+    <<: *clickhouse-defaults
     container_name: signoz-clickhouse
     # ports:
     #   - "9000:9000"
@@ -109,8 +109,8 @@ services:
       - clickhouse:/var/lib/clickhouse/
       # - ./clickhouse/storage.xml:/etc/clickhouse-server/config.d/storage.xml
   signoz:
-    !!merge <<: *db-depend
-    image: signoz/signoz:${VERSION:-v0.84.1}
+    <<: *db-depend
+    image: signoz/signoz:v0.90.1
     container_name: signoz
     command:
       - --config=/root/config/prometheus.yml
@@ -137,11 +137,11 @@ services:
         - --spider
         - -q
         - localhost:8080/api/v1/health
-      interval: 10s
-      timeout: 5s
+      interval: 5s
+      timeout: 3s
       retries: 10
   otel-collector:
-    !!merge <<: *db-depend
+    <<: *db-depend
     image: signoz/signoz-otel-collector:${OTELCOL_TAG:-v0.111.41}
     container_name: signoz-otel-collector
     command:
@@ -163,7 +163,7 @@ services:
       signoz:
         condition: service_healthy
   schema-migrator-sync:
-    !!merge <<: *common
+    <<: *common
     image: signoz/signoz-schema-migrator:${OTELCOL_TAG:-v0.111.41}
     container_name: schema-migrator-sync
     command:
@@ -175,7 +175,7 @@ services:
         condition: service_healthy
     restart: on-failure
   schema-migrator-async:
-    !!merge <<: *db-depend
+    <<: *db-depend
     image: signoz/signoz-schema-migrator:${OTELCOL_TAG:-v0.111.41}
     container_name: schema-migrator-async
     command:
