--- a/sqlc.yaml
+++ b/sqlc.yaml
@@ -25,5 +25,30 @@ sql:
         output_models_file_name: models.go
         output_querier_file_name: querier.go
         query_parameter_limit: 1
-        omit_unused_structs: false
+        omit_unused_structs: true
+  - engine: postgresql
+    schema: internal/identity/database/migrations/
+    queries: internal/identity/database/queries.sql
+    gen:
+      go:
+        package: database
+        out: internal/identity/database
+        sql_package: database/sql
+        emit_interface: true
+        emit_json_tags: false
+        json_tags_id_uppercase: false
+        emit_db_tags: false
+        emit_prepared_queries: true
+        emit_exact_table_names: false
+        emit_empty_slices: false
+        emit_result_struct_pointers: true
+        emit_params_struct_pointers: false
+        emit_methods_with_db_argument: false
+        json_tags_case_style: none
+        output_batch_file_name: batch.go
+        output_db_file_name: db.go
+        output_models_file_name: models.go
+        output_querier_file_name: querier.go
+        query_parameter_limit: 1
+        omit_unused_structs: true
 
