--- a/deployments/docker-compose/docker-compose.yaml
+++ b/deployments/docker-compose/docker-compose.yaml
@@ -46,8 +46,9 @@ services:
         - *otel-metrics-env
         - *otel-logs-env 
         - *db-env
+      WALLABAGO_PORT: 7080
     ports:
-      - 7080:8080
+      - 7080:7080
 
   postgres:
     networks:
