--- a/deployments/docker-compose/docker-compose.yaml
+++ b/deployments/docker-compose/docker-compose.yaml
@@ -37,6 +37,7 @@ services:
         condition: service_healthy
       migrations:
         condition: service_completed_successfully
+
     build: ../../
     restart: no
     environment:
@@ -45,8 +46,16 @@ services:
         - *otel-metrics-env
         - *otel-logs-env 
         - *db-env
+      WALLABAGO_PORT: 7080
     ports:
-      - 7080:8080
+      - 7080:7080
+    develop:
+      watch:
+        - path: ../../internal/
+          action: rebuild
+        - path: ../../cmd/
+          action: rebuild
+
 
   postgres:
     networks:
@@ -62,10 +71,10 @@ services:
       # we use CMD-SHELL with sh in order to allow string interpolation
       test: ["CMD-SHELL", "sh -c 'pg_isready -U $${POSTGRES_USER} -d $${POSTGRES_DB}'"]
       start_interval: 1s
-      start_period: 5s
-      timeout: 5s
-      interval: 10s
-      retries: 10
+      start_period: 1s
+      timeout: 1s
+      interval: 1s
+      retries: 30
         
 networks:
   wallabago:
